<resources>
    <string name="app_name">pensieve</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign in</string>
    <string name="already_registered_login">Already registered? Login</string>
    <string name="not_registered_yet_register">Not registered yet? Register</string>
    <string name="welcome_to_npensieve">Welcome to\nPensieve</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="feed">Feed</string>
    <string name="hi_im_username">Hi, I\'m username!</string>
    <string name="favourites">Favourites</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="theme">Theme</string>
    <string name="create_post">Create post</string>
    <string name="save_theme">Save theme</string>
    <string name="theme_created_by">Theme created by</string>
    <string name="subscribe">subscribe</string>
    <string name="unsubscribe">unsubscribe</string>
</resources>