<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    android:gravity="center">

    <TextView
        android:text="@string/welcome_to_npensieve"
        android:layout_height="120dp"
        android:layout_width="320dp"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/brown950"
        android:gravity="center" />

    <EditText
        android:id="@+id/emailEditText"
        style="@style/EditTextStyle"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/passwordEditText"
        style="@style/EditTextStyle"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginButton"
        style="@style/ActionButtonStyle"
        android:text="@string/sign_in" />

    <TextView
        android:id="@+id/goToRegistrationText"
        android:text="@string/not_registered_yet_register"
        android:layout_height="40dp"
        android:layout_width="320dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/brown950"
        android:gravity="center" />
</LinearLayout>